--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -1,3 +1,11 @@
+name: GitHub Actions Demo
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+
 jobs:
   appinspect-job:
     runs-on: ubuntu-latest
