--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -14,6 +14,6 @@ jobs:
         with:
           username: ${{ secrets.SPL_COM_USER }}
           password: ${{ secrets.SPL_COM_PASSWORD }}
-          app_path: build/package/
+          app_path: ./
           included_tags: "cloud,self-service"
           excluded_tags: "offensive"
