--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -10,10 +10,12 @@ jobs:
   appinspect-job:
     runs-on: ubuntu-latest
     steps:
+      - name: Compress archive
+        run : tar -czvf TA-lw.spl * --transform='s,^,/TA-lw/'
       - uses: splunk/appinspect-api-action@v3.0
         with:
           username: ${{ secrets.SPL_COM_USER }}
           password: ${{ secrets.SPL_COM_PASSWORD }}
-          app_path: ./
+          app_path: ./TA-lw.spl
           included_tags: "cloud,self-service"
           excluded_tags: "offensive"
