--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Compress archive
         run : tar --exclude "build" -czvf build/package/TA-lw.spl * --transform='s,^,/TA-lw/,'
       - name: Test Archive
-        run: tar -txzvf build/package/TA-lw.spl
+        run: tar -tzvf build/package/TA-lw.spl
       - uses: splunk/appinspect-api-action@v3.0
         with:
           username: ${{ secrets.SPL_COM_USER }}
