--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -10,7 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+      - name: Create build dir
+        run: mkdir -p build/package/
+      - name: Extraction version
+        run: echo ${{ github.ref }} | sed -e 's/^v//"
       - name: Compress archive
         run : tar --exclude "build" --exclude "README.md" -czvf build/package/TA-lw.spl * --transform='s,^,TA-lw/,'
       - name: Initialize Release
