--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -12,11 +12,11 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v4
       - name: Create build dir
-        run: mkdir -p build/package/
+        run: mkdir -p ta-lw-package/
       - name: Extraction version
         run: echo ${{ github.ref }} | sed -e 's/^v//'
       - name: Compress archive
-        run : tar --exclude "build" --exclude "README.md" -czvf build/package/TA-lw.spl * --transform='s,^,TA-lw/,'
+        run : tar --exclude "ta-lw-package" --exclude "README.md" -czvf build/package/TA-lw.spl * --transform='s,^,TA-lw/,'
       - name: Initialize Release
         uses: actions/create-release@v1
         id: create_release
@@ -29,5 +29,5 @@ jobs:
         uses: csexton/release-asset-action@v2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          file: build/package/TA-lw.spl
+          file: ta-lw-package/TA-lw.spl
           release-url: ${{ steps.create_release.outputs.upload_url }}
