--- a/default/app.conf
+++ b/default/app.conf
@@ -7,7 +7,7 @@ build = 24
 
 [launcher]
 author = Lacework Delivery
-version = 0.2.2
+version = X.Y.Z
 description = Splunk modular-input to gather data from the lacework instance.
 
 [package]
@@ -21,6 +21,6 @@ reload.passwords = simple
 
 [ui]
 is_visible = 1
-label = lw
+label = Lacework Add-On
 docs_section_override = AddOns:released
 
