--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -26,6 +26,8 @@ jobs:
           new_str=$(echo "${GITHUB_REF#refs/*/}" | tr -d "v")
           echo "SPL_FILE=ta-lw-package/TA-lw-$new_str.spl" >> $GITHUB_ENV
           tar --exclude "ta-lw-package" --exclude "README.md" -czvf ta-lw-package/TA-lw-$new_str.spl.spl * --transform='s,^,TA-lw/,'
+          ls -al ta-lw-package/
+          echo $SPL_FILE
       - name: Initialize Release
         uses: actions/create-release@v1
         id: create_release
