--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Update Version Number
         run: |
           old_str="X.Y.Z"
-          new_str=$(echo "${GITHUB_REF#refs/*/}" | tr -d "v")
+          new_str="0.0.1"
           sed -i "s/$old_str/$new_str/g" ./default/app.conf
           sed -i "s/$old_str/$new_str/g" app.manifest
           cat ./default/app.conf
